# k4EDM4hep2LcioConv

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: ISSUE_TEMPLATE
.github/workflows/: clang-format-check.yml  pre-commit.yml  test.yml
cmake/: CreateProjectConfig.cmake  Project_Config_Template.cmake.in  build_flags.cmake  k4EDM4hep2LcioConvConfig.cmake.in  k4EDM4hep2LcioConvCreateConfig.cmake  package_version_template.h.in
doc/: LCIO2EDM4hep.md  ReleaseNotes.md
include/: k4EDM4hep2LcioConv.h
k4EDM4hep2LcioConv/: CMakeLists.txt
k4EDM4hep2LcioConv/include/k4EDM4hep2LcioConv/: MappingUtils.h  k4EDM4hep2LcioConv.h  k4EDM4hep2LcioConv.ipp  k4Lcio2EDM4hepConv.h  k4Lcio2EDM4hepConv.ipp
k4EDM4hep2LcioConv/src/: k4EDM4hep2LcioConv.cpp  k4Lcio2EDM4hepConv.cpp
src/: k4EDM4hep2LcioConv.cpp
standalone/: CMakeLists.txt  README.md  lcio2edm4hep.cpp
tests/: CMakeLists.txt  CompareEDM4hepLCIO.cc  ComparisonUtils.h  compare_contents.cpp  edm4hep_roundtrip.cpp  edm4hep_to_lcio.cpp
tests/input_files/: ild_higgs_dst.slcio  ild_higgs_rec.slcio.md5
tests/scripts/: get_test_data.sh  run_standalone_converter.sh
tests/src/: CompareEDM4hepEDM4hep.cc  CompareEDM4hepEDM4hep.h  CompareEDM4hepLCIO.cc  CompareEDM4hepLCIO.h  ComparisonUtils.h  EDM4hep2LCIOUtilities.cc  EDM4hep2LCIOUtilities.h  ObjectMapping.cc  ObjectMapping.h
